# CodotakuGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: AppState.cpp  AppState.h  Exception.h  Model.cpp  Model.h  Vertex.h  main.cpp  utils.h
